# shared_config_manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .snyk  AGENTS.md  BACKPORT_TODO  CHANGELOG.md  Jenkinsfile  Makefile  README.md  SECURITY.md  docker-compose.override.sample.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/: copilot-instructions.md  dependabot.yaml  dpkg-versions.yaml  ghci.yaml  publish.yaml  renovate.json5
.github/workflows/: audit.yaml  changelog.yaml  clean.yaml  codeql.yaml  dependabot-auto-merge.yaml  main.yaml  main.yml  nightly.yml  rebuild.yaml  rebuild.yml
acceptance_tests/: .dockerignore  .prospector.yaml  .snyk  Dockerfile  Pipfile  create-test-repos  create_test_repos  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  screenshot.js
acceptance_tests/acceptance/: __init__.py  conftest.py  test_refresh.py  test_stats.py  test_status.py  test_ui.py  test_workflow.py
acceptance_tests/acceptance/file/: conftest.py  test_workflow.py
acceptance_tests/acceptance/infile/: conftest.py
acceptance_tests/acceptance/inline/: conftest.py  docker-compose.yaml  test_workflow.py
acceptance_tests/acceptance/normal/: conftest.py  docker-compose.yaml  test_refresh.py  test_status.py  test_tarball.py  test_workflow.py
acceptance_tests/master_config/: config.yaml
api-infile/: shared_config_manager.yaml
app/: .bandit.yaml  .coveragerc  .dockerignore  .prospector.yaml  Dockerfile  Pipfile  development.ini  git_sparse_clone  gunicorn.conf.py  is_ready  logging.yaml  production.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  shared_config_slave.py
app/scripts/: git-sparse-clone  scm-is-ready  start
app/shared_config_manager/: __init__.py  api.py  app.py  broadcast_status.py  config.py  configuration.py  main.py  security.py  sentry.py  services.py  slave_stats.py  slave_status.py  ui.py  views.py
app/shared_config_manager/scripts/: shared_config_slave.py
app/shared_config_manager/sources/: __init__.py  base.py  file.py  git.py  mode.py  rclone.py  registry.py  rsync.py  ssh.py
app/shared_config_manager/template_engines/: __init__.py  base.py  mako.py  shell.py
app/shared_config_manager/templates/: index.html.jinja2  index.html.mako  source.html.jinja2  source.html.mako
app/tests/: __init__.py  test_sentry.py
app/tests/sources/: test_git.py  test_rclone.py  test_registry.py  test_rsync.py
app/tests/template_engines/: conftest.py  test_mako.py  test_shell.py
ci/: clean-dockerhub-tag  config.yaml  dpkg-versions.yaml  requirements.txt
