[tool.poetry]
name = "shared-config-manager-acceptance"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pytest-cov = "4.1.0"
prospector = "1.10.3"
typing-extensions = "4.8.0"
c2cwsgiutils = { version = "6.0.9", extras = ["standard", "test_images"] }
requests = "2.32.5"
boltons = "23.0.0"
netifaces = "0.11.0"
lxml = "4.9.4"
urllib3 = "2.6.3"
gitpython = "3.1.46"
pillow = "10.3.0"
idna = "3.7"
gunicorn = "23.0.0"
certifi = "2026.1.4"
sentry-sdk = "2.8.0"
webob = "1.8.9"
