[tool.poetry]
name = "shared-config-manager-acceptance"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest-cov = "6.0.0"
prospector = { version = "1.15.3", extras = ["with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.15.1"
typing-extensions = "4.12.2"
c2cwsgiutils = { version = "6.1.9", extras = ["standard", "test_images"] }
requests = "2.32.5"
boltons = "24.1.0"
netifaces = "0.11.0"
lxml = "5.3.1"
urllib3 = "2.6.3"
pillow = "12.1.1"
