[tool.poetry]
name = "shared-config-manager-acceptance"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest-cov = "6.0.0"
prospector = { version = "1.15.3", extras = ["with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.15.1"
typing-extensions = "4.12.2"
c2cwsgiutils = { version = "6.1.9", extras = ["standard", "test_images"] }
requests = "2.33.1"
boltons = "24.1.0"
netifaces = "0.11.0"
lxml = "6.1.1"
urllib3 = "2.7.0"
pillow = "12.2.0"
pyjwt = "2.13.0"
ujson = "5.13.0"
mako = "1.3.12"
gitpython = "3.1.50"
idna = "3.15"
