[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.poetry]
name = "shared-config-manager"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyYAML = "6.0.3"
inotify = "0.2.12"
c2cwsgiutils = { version = "6.0.9", extras = ["broadcast", "standard", "oauth2", "debug"] }
pyramid-mako = "1.1.0"
urllib3 = "2.5.0"
pillow = "10.3.0"
idna = "3.7"
gunicorn = "23.0.0"
requests = "2.32.5"
certifi = "2025.11.12"
sentry-sdk = "2.8.0"
webob = "1.8.9"

[tool.poetry.dev-dependencies]
prospector = { extras = ["with_mypy", "with_bandit"], version = "1.10.3" }
pytest-cov = "4.1.0"
types-pyyaml = "6.0.12.20250402"
types-requests = "2.31.0.20240406"
typing-extensions = "4.8.0"

[tool.poetry.scripts]
shared-config-slave = "shared_config_manager.scripts.shared_config_slave:main"

[tool.poetry.plugins."paste.app_factory"]
main = "shared_config_manager.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
