[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.poetry]
name = "shared-config-manager"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PyYAML = "6.0.3"
inotify = "0.2.12"
c2cwsgiutils = { version = "6.1.9", extras = ["broadcast", "standard", "oauth2", "debug"] }
pyramid-mako = "1.1.0"
requests = "2.33.1"
urllib3 = "2.6.3"
pyjwt = "2.12.1"
ujson = "5.12.0"
mako = "1.3.11"

[tool.poetry.dev-dependencies]
prospector = { version = "1.15.3", extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.15.1"
types-pyyaml = "6.0.12.20250402"
types-requests = "2.32.0.20250328"
pytest = "9.0.3"

[tool.poetry.scripts]
shared-config-slave = "shared_config_manager.scripts.shared_config_slave:main"

[tool.poetry.plugins."paste.app_factory"]
main = "shared_config_manager.app:main"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "version_branch" -%}
{{serialize_pep440(bump_version(base, 1 if env.get("IS_MASTER") == "TRUE" else 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
